# SysMacro

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ARCH_Macro.hpp  OS_Macro.hpp  sysmacro.hpp
tests/: verify.cpp
